--- a/resources/sass/components/atomic/_button.scss
+++ b/resources/sass/components/atomic/_button.scss
@@ -1,17 +1,27 @@
 .Button {
     border: 1px solid $green-dark;
     background-color: $green-light;
-    line-height: 40px;
-    height: 40px;
-    display: inline-block;
+    line-height: 1.5;
+    height: 24px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     color: $green-dark;
     text-align: center;
-    padding: 0 24px;
-    font-size: 18px;
+    font-size: 16px;
     cursor: pointer;
     text-decoration: none;
     letter-spacing: -0.3px;
     position: relative;
+    padding: 7px 16px;
+    white-space: nowrap;
+    vertical-align: top;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    box-sizing: content-box;
 
     &.is-primary {
         background: $green-dark;
@@ -77,6 +87,13 @@
             }
         }
     }
+}
+
+input[type="submit"].Button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0;
 }
 
 @keyframes spinner {
