--- a/resources/sass/components/atomic/_input.scss
+++ b/resources/sass/components/atomic/_input.scss
@@ -1,9 +1,28 @@
 .Input {
-    padding: 0 8px;
     height: 40px;
     line-height: 1.5;
-    border: 1px solid $grey-light;
     border-radius: 4px;
+    box-shadow: inset 0 0.0625em 0.125em rgba(10,10,10,.05);
+    max-width: 100%;
+    width: 100%;
+    background: white;
+    color: $grey-dark;
+    display: inline-flex;
+    align-items: center;
+    border: 1px solid $grey-light;
+    font-size: 16px;
+    padding: 7px 11px;
+    position: relative;
+    vertical-align: top;
+    justify-content: flex-start;
+
+    &:hover {
+        border-color: $grey-mid;
+    }
+
+    &:active {
+        outline: 0;
+    }
 
     &.is-error {
         border-color: $alert;
